add database storage, and set it as default
